--- a/src/common/scss/fonts/icon.scss
+++ b/src/common/scss/fonts/icon.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "./variables";
 
 @font-face {
   font-family: 'sonar-icon';
@@ -11,7 +11,7 @@
   font-style: normal;
 }
 
-.icon {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'sonar-icon' !important;
   speak: none;
