更新 - 添加轮播图

--- a/src/common/scss/base.scss
+++ b/src/common/scss/base.scss
@@ -8,3 +8,12 @@ html, body {
   background: $color-background;
   color: $color-text;
 }
+
+ul, li {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
