更新 - hotkey api

--- a/src/common/scss/fonts/icon.scss
+++ b/src/common/scss/fonts/icon.scss
@@ -60,9 +60,9 @@
     content: unicode($icon-music); 
   }
 }
-.icon-Search {
+.icon-search {
   &:before {
-    content: unicode($icon-Search); 
+    content: unicode($icon-search); 
   }
 }
 .icon-clear {
