--- a/src/common/scss/fonts/variables.scss
+++ b/src/common/scss/fonts/variables.scss
@@ -6,7 +6,7 @@ $icon-add: \e902;
 $icon-play-mini: \e903;
 $icon-playlist: \e904;
 $icon-music: \e905;
-$icon-Search: \e906;
+$icon-search: \e906;
 $icon-clear: \e907;
 $icon-close: \e908;
 $icon-like: \e909;
